Modify SonarQube yml

--- a/.github/workflows/sonarqube-code-analysis.yml
+++ b/.github/workflows/sonarqube-code-analysis.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+          .\.sonar\scanner\dotnet-sonarscanner --version    
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.G_AUTO_TOKEN }}  # Needed to get PR information, if any
