--- a/.github/workflows/sonarqube-code-analysis.yml
+++ b/.github/workflows/sonarqube-code-analysis.yml
@@ -5,64 +5,44 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
+    types: [opened, synchronize, reopened]
 
 jobs:
-  sonarcloud:
-    name: SonarQube Analysis
+  build:
+    name: Build
     runs-on: windows-latest
-
     steps:
-      # Checkout the code
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Fetch all history to ensure correct analysis
-
-      # Setup .NET Core SDK
-      - name: Set up .NET SDK
-        uses: actions/setup-dotnet@v2
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          dotnet-version: '7.x'  # Use the version your Blazor WASM project needs
-
-      # Install SonarQube Scanner
-      - name: Install SonarQube Scanner
-        run: dotnet tool install --global dotnet-sonarscanner
-
-      # Run SonarQube Scanner Begin
-      - name: Run SonarQube Scanner Begin
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          java-version: 1.11
+      - name: Cache SonarQube packages
+        uses: actions/cache@v1
+        with:
+          path: ~\sonar\cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarQube scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v1
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+      - name: Install SonarQube scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: powershell
         run: |
-          dotnet-sonarscanner begin /k:"EP-POC-Code-Automation-Key" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
-
-      # Build the project
-      - name: Build Project
-        run: dotnet build --configuration Release
-
-
-      # Run SonarQube Scanner End
-      - name: Run SonarQube Scanner End
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Build and analyze
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-
-      # Check SonarQube Quality Gate Status
-      - name: Check SonarQube Quality Gate
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          GITHUB_TOKEN: ${{ secrets.G_AUTO_TOKEN}}  # Needed to get PR information, if any
+        shell: powershell
         run: |
-          echo "Checking SonarQube Quality Gate..."
-          response=$(curl -s -u $SONAR_TOKEN: "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=BlazorWasmProjectKey")
-          status=$(echo $response | jq -r '.projectStatus.status')
-
-          echo "Quality Gate status: $status"
-
-          if [[ "$status" != "OK" ]]; then
-            echo "Quality Gate failed!"
-            exit 1
-          else
-            echo "Quality Gate passed!"
-          fi
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"EP-POC-Code-Automation-Key" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
+          dotnet build
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
