--- a/.github/workflows/sonarqube-code-analysis.yml
+++ b/.github/workflows/sonarqube-code-analysis.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up .NET SDK
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '7.x'
+          dotnet-version: '6.x'  # Update to a supported version
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
@@ -48,8 +48,8 @@ jobs:
         shell: powershell
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool install global dotnet-sonarscanner 
-    
+          dotnet tool install --global dotnet-sonarscanner
+
       - name: Check SonarQube Server Availability
         run: |
           echo "Pinging SonarQube server..."
@@ -57,7 +57,7 @@ jobs:
           
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.G_AUTO_TOKEN}}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.G_AUTO_TOKEN }}  # Needed to get PR information, if any
           SONAR_SCANNER_OPTS: "-X"
         shell: powershell
         run: |
@@ -65,4 +65,3 @@ jobs:
            dotnet-sonarscanner begin /k:"EP-POC-Code-Automation-Key" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
            dotnet build
            dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-        
