--- a/.github/workflows/sonarqube-code-analysis.yml
+++ b/.github/workflows/sonarqube-code-analysis.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up .NET SDK
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '6.x'  # Update to a supported version
+          dotnet-version: '7.x'  # Update to match your project's target framework
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
