--- a/.github/workflows/sonarqube-code-analysis.yml
+++ b/.github/workflows/sonarqube-code-analysis.yml
@@ -61,6 +61,7 @@ jobs:
           SONAR_SCANNER_OPTS: "-X"
         shell: powershell
         run: |
+           echo "Starting SonarQube analysis..."
            dotnet-sonarscanner begin /k:"EP-POC-Code-Automation-Key" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
            dotnet build
            dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
