--- a/.github/workflows/sonarqube-code-analysis.yml
+++ b/.github/workflows/sonarqube-code-analysis.yml
@@ -57,7 +57,7 @@ jobs:
           
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.G_AUTO_TOKEN }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.G_AUTO_TOKEN }}  
           SONAR_SCANNER_OPTS: "-X"
         shell: powershell
         run: |
