--- a/.github/workflows/sonarqube-code-analysis.yml
+++ b/.github/workflows/sonarqube-code-analysis.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 7.0.x
+        dotnet-version: '7.x'
 
     - name: Install dependencies
       run: dotnet restore
@@ -28,7 +28,7 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: Run tests
-      run: dotnet test ./CSharpCodeReviewNUnitTest/CSharpCodeReviewNUnitTest.csproj --no-build --verbosity normal
+      run: dotnet test  --no-build --verbosity normal
 
     - name: SonarQube Scan
       env:
