--- a/.github/workflows/sonarqube-code-analysis.yml
+++ b/.github/workflows/sonarqube-code-analysis.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
 
-    - name: Build project
-      run: dotnet build --configuration Release
+    - name: Build solution
+      run: dotnet build --configuration Release --no-restore
 
     - name: Run tests
       run: dotnet test  --no-build --verbosity normal
