--- a/.github/workflows/dotnet-code-coverage.yml
+++ b/.github/workflows/dotnet-code-coverage.yml
@@ -1,20 +1,20 @@
-name: Code Coverage
+name: .NET WASM CI
 
 on:
-#   push:
-#     branches: [ main ]
+  push:
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
-permissions:
-  id-token: write  # Ensure the id-token permission is set to write
-  contents: read   # Default permission for reading repository contents
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -25,49 +25,25 @@ jobs:
       run: dotnet restore
 
     - name: Build solution
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --no-restore
 
     - name: Run tests with coverage
-      run: dotnet test --configuration Release --no-build --collect:"XPlat Code Coverage"
-
-    - name: Generate HTML report
       run: |
-        dotnet tool install --global dotnet-reportgenerator-globaltool
-        reportgenerator -reports:**/TestResults/**/*.xml -targetdir:coveragereport -reporttypes:Html
+        dotnet test --no-restore --collect:"XPlat Code Coverage" \
+        /p:CoverletOutputFormat=cobertura
 
-    # - name: Upload HTML coverage report
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: code-coverage-html-report
-    #     path: coveragereport
-    - name: Deploy to GitHub Pages
-      env:
-        G_AUTO_TOKEN: ${{ secrets.G_AUTO_TOKEN }}
+    - name: Check coverage
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git clone --single-branch --branch gh-pages https://x-access-token:${{ secrets.G_AUTO_TOKEN }}@github.com/${{ github.repository }} gh-pages
-        cp -r coveragereport/* gh-pages/
-        cd gh-pages
-        git add .
-        git commit -m 'Update code coverage report'
-        git push origin gh-pages
+        report=$(dotnet tool run reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coveragereport)
+        coverage=$(grep -oP '(?<=line-rate=\")[^\"]+' coveragereport/cobertura.xml | awk '{total += $1; count++} END {print total/count}')
+        echo "Coverage: $coverage"
+        if (( $(echo "$coverage < 0.80" | bc -l) )); then
+          echo "Code coverage is below 80%. Failing the build."
+          exit 1
+        fi
 
-    
-    # - name: Create Pull Request Comment
-    #   if: github.event_name == 'pull_request'
-    #     uses: actions/github-script@v6
-    #     with:
-    #     script: |
-    #         const github = require('@actions/github');
-    #         const context = github.context;
-
-    #         const comment = `Code coverage report is available [here](https://${context.repo.owner}.github.io/${context.repo.repo})`;
-
-    #         github.rest.issues.createComment({
-    #         ...context.repo,
-    #         issue_number: context.issue.number,
-    #         body: comment
-    #         });
-    # env:
-    #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v2
+      with:
+        name: code-coverage-report
+        path: coveragereport
