--- a/.github/workflows/dotnet-code-coverage.yml
+++ b/.github/workflows/dotnet-code-coverage.yml
@@ -38,20 +38,15 @@ jobs:
     - name: List coverage report files
       run: ls -R coveragereport
 
-    - name: Generate and check coverage report
+    - name: Check coverage
       run: |
-        reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coveragereport
-        if [ -f coveragereport/cobertura/cobertura.xml ]; then
-          coverage=$(grep -oP '(?<=line-rate=\")[^\"]+' coveragereport/cobertura/cobertura.xml | awk '{total += $1; count++} END {print total/count}')
-          if [ -z "$coverage" ]; then
-            echo "No coverage data found."
+        coverage_file=$(find . -name "coverage.cobertura.xml")
+        if [ -f "$coverage_file" ]; then
+          coverage=$(grep -oP '(?<=line-rate=\")[^\"]+' "$coverage_file" | awk '{total += $1; count++} END {print total/count}')
+          echo "Coverage: $coverage"
+          if (( $(echo "$coverage < 0.80" | bc -l) )); then
+            echo "Code coverage is below 80%. Failing the build."
             exit 1
-          else
-            echo "Coverage: $coverage"
-            if (( $(echo "$coverage < 0.80" | bc -l) )); then
-              echo "Code coverage is below 80%. Failing the build."
-              exit 1
-            fi
           fi
         else
           echo "Coverage file not found. Failing the build."
