--- a/.github/workflows/dotnet-code-coverage.yml
+++ b/.github/workflows/dotnet-code-coverage.yml
@@ -54,8 +54,13 @@ jobs:
           exit 1
         fi
 
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: code-coverage-report
-        path: coveragereport
+    - name: Install GitHub CLI
+      if: always()
+      run: sudo apt-get install gh
+  
+    - name: Post a comment to PR if coverage is below 80%
+      if: failure() && github.event_name == 'pull_request'
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+          gh pr comment ${{ github.event.pull_request.number }} --body "Code coverage is below 80%: ${{ steps.check_coverage.outputs.coverage }}"
