--- a/.github/workflows/dotnet-code-coverage.yml
+++ b/.github/workflows/dotnet-code-coverage.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Post a comment to PR if coverage is below 80%
       if: failure() && github.event_name == 'pull_request'
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.G_AUTO_TOKEN }}
         COVERAGE_VALUE: ${{ env.COVERAGE_VALUE }}
       run: |
         if [[ -z "$COVERAGE_VALUE" ]]; then
