--- a/.github/workflows/code-coverage-CI-gating.yml
+++ b/.github/workflows/code-coverage-CI-gating.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Generate coverage report using ReportGenerator
       run: |
         reportgenerator -reports:**/coverage.cobertura.xml -targetdir:coveragereport -reporttypes:HtmlInline_AzurePipelines Cobertura
+        
+    - name: List coverage report directory
+      run: ls -R coveragereport
 
     - name: Check coverage
       id: check_coverage
