--- a/.github/workflows/code-coverage-CI-gating.yml
+++ b/.github/workflows/code-coverage-CI-gating.yml
@@ -47,9 +47,10 @@ jobs:
         cobertura_report="coveragereport/Cobertura.xml"
         if [ -f "$cobertura_report" ]; then
           coverage=$(grep -oP '(?<=line-rate=\")[^\"]+' "$cobertura_report" | awk '{total += $1; count++} END {print total/count}')
-          echo "Coverage: $coverage"
-          echo "COVERAGE_VALUE=$coverage" >> $GITHUB_ENV
-          if (( $(echo "$coverage < 0.80" | bc -l) )); then
+          rounded_coverage=$(printf "%.2f" "$coverage")
+          echo "Coverage: $rounded_coverage"
+          echo "COVERAGE_VALUE=$rounded_coverage" >> $GITHUB_ENV
+          if (( $(echo "$rounded_coverage < 0.80" | bc -l) )); then
             echo "Code coverage is below 80%. Failing the build."
             exit 1
           fi
